# torrust

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: auth.rs  common.rs  config.rs  database.rs  mailer.rs  main.rs  tracker.rs
backend/src/handlers/: torrent.rs  user.rs
backend/src/models/: user.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/components/: Breadcrumb.vue  FilterCategory.vue  Footer.vue  Logo.vue  PageSize.vue  Pagination.vue  SelectComponent.vue  TorrentList.vue
frontend/src/components/navigation/: Navbar.vue  Profile.vue  Sidebar.vue
frontend/src/components/torrent-upload/: CategorySelect.vue  FileUpload.vue
frontend/src/router/: index.js
frontend/src/store/: auth.js  index.js
frontend/src/views/: AuthenticationModal.vue  Torrent.vue  TorrentUpload.vue  Torrents.vue  Welcome.vue
frontend/src/views/settings/: Settings.vue
