[package]
name = "torrust"
version = "1.0.0"
authors = ["Mick <mick@dutchbits.nl>", "Wesley <wesley@dutchbits.nl"]
edition = "2018"

[dependencies]
actix-web = "4.10.2"
actix-multipart = "0.7.2"
actix-cors = "0.7.1"
actix-contrib-logger = "0"
env_logger = "0"
log = "*"

async-std = "1.10.0"
futures = "0.3.5"

lazy_static = "1.4"

sqlx = { version = "0.8.5", features = [
    # "runtime-actix-rustls",
    "runtime-tokio",
    "sqlite",
    "migrate",
    "time",
] }

config = "0.11"
toml = "0.5"

derive_builder = "0.10"
derive_more = "0.99"

serde = { version = "1.0", features = ["rc"] }
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8.17"
serde_bencode = "0.2.3"
serde_bytes = "0.11"

urlencoding = "2.1.0"

pbkdf2 = "0.11.0"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8.5"

sanitize-filename = "0.3.0"

jsonwebtoken = "7.2.0"

sha-1 = "0.9.8"
binascii = "0.1"

reqwest = { version = "0.11.4", features = ["json"] }

tokio = { version = "1.16", features = [
    "macros",
    "io-util",
    "net",
    "time",
    "rt-multi-thread",
    "fs",
    "sync",
    "signal",
] }

async-trait = "0"

lettre = { version = "0.10.0-rc.3", features = [
    "builder",
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
] }
sailfish = "0.8"
